Mobile Audio List Overflow Fix
 - Mobile browser window now scrolls on audio list overflow
 - Need to correct the flex-column display & image overflow to prevent horizontal scrollbar

--- a/softcut-ui/src/app/app.component.scss
+++ b/softcut-ui/src/app/app.component.scss
@@ -40,6 +40,7 @@
 
 @media only screen and (max-width: 600px) {
     .content {
+        display: flex;
         width: auto;
         height: 100%;
         padding-left: 10px;
