--- a/softcut-ui/src/app/archive/archive.component.scss
+++ b/softcut-ui/src/app/archive/archive.component.scss
@@ -4,6 +4,14 @@
 	flex-direction: column;
 }
 
+@media only screen and (max-width: 600px) {
+	:host {
+		height: 100%;
+		flex: 1 auto;
+		padding-left: '';
+	}
+}
+
 .archiveTopRow {
 	flex: 0 auto;
 }
